--- a/static/partials/home.html
+++ b/static/partials/home.html
@@ -11,7 +11,19 @@
     <td> {{transaction.Amount }} </td>
     <td> {{transaction.Memo}} </td>
   </tr>
+</table> 
+
+<h2> Recent Gambles </h2>
+<table class="table">
+  <tr> <th> Time </th> <th> User </th> <th> Amount </th> <th> Guess </th> </tr> 
+  <tr ng-repeat="gamble in recentGambles | orderBy:'TS':true" ng-class="{ 'success': gamble.IsWinner, 'danger': !gamble.IsWinner}">
+    <td> <a ui-sref="gamble({id: gamble.ID})">{{gamble.TS | fromNow }}</a> </td>
+    <td> <a ui-sref="user({user: gamble.User})">{{gamble.User }}</a></td>
+    <td> {{gamble.Amount }} </td>
+    <td> {{gamble.GuessHeads}} </td>
+  </tr>
 </table>
+
 
 <h2> All Users </h2>
 <table class="table">
