--- a/static/partials/cashout.html
+++ b/static/partials/cashout.html
@@ -1,11 +1,14 @@
 <div class="container">
-
   <p> Here you can spend your hard earned mongobucks! </p>
 
   <br>
-
   <table class="table">
-    <tr> <th> Prize </th> <th> Price </th> <th> Buy </th> </tr>
-    <tr> <td> Lunch with Dev (pending Dev approval) </td> <td> 2500 </td> <td> <button class="btn btn-primary" disabled>Buy (Maybay one day)</button></tr>
+    <tr> <th> Prize </th> <th> Description </th> <th> Price </th> <th> Buy </th> </tr>
+    <tr ng-repeat="reward in rewards | orderBy:'Price'">
+      <td> {{reward.Name}} </td>
+      <td> {{reward.Description}} </td>
+      <td> {{reward.Price}} </td>
+      <td> <button class="btn btn-primary" ng-click="buy(reward)" ng-disabled="reward.Price > me.Balance">Buy</button> </td>
+    </tr>
   </table>
 </div>
