--- a/static/partials/me.html
+++ b/static/partials/me.html
@@ -3,5 +3,5 @@
 <h2> Valid Tickets </h2>
 
 <div ng-repeat="ticket in tickets">
-  <a href="http://localhost:8080/api/tickets/{{ticket.Redemption}}/render"><img ng-if="!ticket.IsUsed" style="border:1px solid black;" ng-src="http://localhost:8080/api/tickets/{{ticket.Redemption}}/render"></a>
+  <a href="/api/tickets/{{ticket.Redemption}}/render"><img ng-if="!ticket.IsUsed" style="border:1px solid black;" ng-src="/api/tickets/{{ticket.Redemption}}/render"></a>
 </div>
